--- a/darkerr.css
+++ b/darkerr.css
@@ -1,5 +1,10 @@
 /*  Darkerr 2.0 by Felix
-        2.0 (21/05/2017)
+        1.0 (17/05/2017) - First release
+        1.1 (18/05/2017) - Fix series and movies detailed view
+        1.2 (18/05/2017) - Color adjustment
+        1.3 (18/05/2017) - Fix "Discover new movies" view on Radarr
+        1.4 (19/05/2017) - Fix regular expression
+        2.0 (21/05/2017) - Rewritten, color adjustment, various fix
 */
 
 /*backgrounds*/
@@ -539,7 +544,7 @@ ul.navbar-nav li a {
     color: #D4D4D4 !important;
 }
 
-/*-------------------------------------------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------*/
 
 #footer-region::after {
     content: "\A Darkerr Ver. 2.0";
