--- a/darkerr.css
+++ b/darkerr.css
@@ -5,6 +5,7 @@
         1.3 (18/05/2017) - Fix "Discover new movies" view on Radarr
         1.4 (19/05/2017) - Fix regular expression
         2.0 (21/05/2017) - Rewritten, color adjustment, various fix
+        2.1 (22/05/2017) - Search bar is always visible now
 */
 
 
