--- a/darkerr.css
+++ b/darkerr.css
@@ -6,6 +6,7 @@
         1.4 (19/05/2017) - Fix regular expression
         2.0 (21/05/2017) - Rewritten, color adjustment, various fix
         2.1 (22/05/2017) - Search bar is always visible now
+        2.2 (24/05/2017) - Fix buttons in search view
 */
 
 
@@ -548,6 +549,6 @@ ul.navbar-nav li a {
 /*------------------------------------------------*/
 
 #footer-region::after {
-    content: "\A Darkerr Ver. 2.1";
+    content: "\A Darkerr Ver. 2.2";
     white-space: pre;
 }
